name:                havana
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            http://github.com/SamirTalwar/havana#readme
license:             MIT
license-file:        LICENSE
author:              Samir Talwar
maintainer:          samir@noodlesandwich.com
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     Havana, Havana.AST, Havana.Compiler, Havana.Parser, Havana.Serializer
  hs-source-dirs:      src/core
  build-depends:       base >= 4.7 && < 5, bytestring, filepath, mtl, parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable havanac
  default-language:    Haskell2010
  hs-source-dirs:      src/executable
  main-is:             Main.hs
  build-depends:       base
                     , havana
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

Test-Suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/core
  main-is:             Tests.hs
  build-depends:       base
                     , havana
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

Test-Suite acceptance-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/acceptance
  main-is:             AcceptanceTests.hs
  build-depends:       base
                     , havana
                     , shelly
                     , bytestring
                     , system-filepath
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/SamirTalwar/havana
